' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.
@startuml Mitglied

skinparam classAttributeIconSize 0
' skinparam monochrome true

package java {
    package util {
        class UUID
        class URL
        class Currency
        class LocalDate
    }


}

package com.acme.mannschaftsmitglied.entity #DDDDDD {
    class Adresse {
        readonly plz: String
        readonly ort: String
    }
    enum GeschlechtType {
        MAENNLICH
        WEIBLICH
        DIVERS
    }

    enum FamilienstandType {
        LEDIG
        VERHEIRATET
        GESCHIEDEN
        VERWITWET
    }

    class Mitglied << entity >> {
        readonly id : UUID
        readonly nachname : String
        readonly email : String
        readonly mannschaft: Int
        readonly hasNewsletter : Boolean
        readonly geburtsdatum: LocalDate
        readonly homepage: URL
        readonly geschlecht: GeschlechtType
        readonly familienstand: FamilienstandType
    }

    Mitglied *--> "1" Adresse : adresse
    Mitglied .up.> GeschlechtType
    Mitglied .up.> FamilienstandType

    Mitglied ..> UUID
    Mitglied ..> LocalDate
    Mitglied ..> URL


}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
